fixed assigned to field contacts

--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -264,3 +264,24 @@ span {
     }
   }
 }
+
+@media (max-width: 367px) {
+  .mobile-navBar {
+    gap: 10px;
+  }
+
+  .mobile_nav_btn {
+    height: 70px;
+    width: 70px;
+  }
+
+  .mobile_nav_btn span {
+    gap: 2px;
+    font-size: 12px;
+  }
+
+  .mobile_nav_btn img {
+    width: 20px;
+    height: 20px;
+  }
+}
