--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -78,7 +78,7 @@
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  background-color: #29abe2;
+  /* background-color: #29abe2; */
   border: 1px solid white;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .input-icon-assign-to-container:hover {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   cursor: pointer;
 }
 
