--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -30,7 +30,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+  z-index: 2; /* Ensure it appears above other elements */
 }
 
 .dropdown-item {
@@ -58,7 +58,7 @@
 }
 
 .dropdown-item img {
-  width: 42x; /* Adjust the size as needed */
+  width: 42px; /* Adjust the size as needed */
   height: 42px; /* Adjust the size as needed */
   border-radius: 50%;
 }
@@ -78,7 +78,6 @@
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  /* background-color: #29abe2; */
   border: 1px solid white;
 }
 
@@ -89,9 +88,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  top: -50%;
-  left: 90%;
+  position: absolute;
+  top: 27%;
+  right: 10px;
 }
 
 .input-icon-assign-to-container:hover {
@@ -112,9 +111,9 @@
 
 .createTask-button:disabled {
   box-shadow: none;
-  background-color: #d3d3d3; /* Light gray background color when disabled */
-  color: #a9a9a9; /* Gray text color when disabled */
-  cursor: not-allowed; /* Change cursor to indicate the button is not clickable */
+  background-color: #d3d3d3;
+  color: #a9a9a9;
+  cursor: not-allowed;
 }
 
 .current-letter {
@@ -122,4 +121,17 @@
   align-items: center;
   padding-left: 8px;
   background-color: #f6f5fa;
+}
+
+.assigned-circles-section {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  height: 42px;
+  border: dashed 2px black;
+  position: relative;
+  top: -5px;
+}
+
+.user-circle {
 }
