--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -3,6 +3,7 @@
   0% {
     transform: translateX(100%);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -12,6 +13,7 @@
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(100%);
   }
@@ -55,20 +57,21 @@
 }
 
 .content-overlay-wrapper {
+  width: fit-content;
   display: flex;
   height: 492px;
   border-radius: 30px;
   background: white;
-  border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .close-icon {
+  align-self: flex-end;
   z-index: 7;
-  width: 60px;
-  height: 60px;
-  padding: 8px;
+  width: 30px;
+  height: 30px;
+
 }
 
 .close-icon:hover {
@@ -77,25 +80,23 @@
   cursor: pointer;
   border-radius: 50%;
 }
+
 .content-overlay-left {
-  width: 453px;
-  height: 594px;
   background: #1e2a3a;
   color: white;
   display: flex;
+  justify-content: center;
+  gap: 12px;
   flex-direction: column;
-  padding: 20px;
-  padding-top: 80px;
+  padding: 66px 48px;
   font-family: Inter;
   font-weight: 700;
   font-size: 61px;
   line-height: 73.2px;
 
   img {
-    width: 86px;
-    height: 99px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    width: 55.6px;
+    height: 66.48px;
   }
 
   span {
@@ -106,28 +107,39 @@
   }
 }
 
+.content-left-text {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 .blue-line {
   width: 90px;
   border-top: 3px solid #29abe2;
-  padding-left: 30px;
-  margin-top: 14px;
+}
+
+.input-and-close-wrapper {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+
 }
 
 .content-overlay-right {
   position: relative;
-  left: 35px;
-  width: calc(100% - 453px);
+  padding: 40px 40px 60px 60px;
   display: flex;
+  gap: 60px;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 
 .input-group {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 40px;
 }
 
 .contact-form {
@@ -135,24 +147,69 @@
   flex-direction: column;
   align-items: flex-end;
 }
+
 .contact-form input {
   width: 422px;
   height: 50px;
-
+  padding: 13px 21px;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.contact-form input::placeholder {
+  color: #D1D1D1;
+
 }
 
 button:hover {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
+.create-btn-overlay:hover {
+  background-color: #29abe2;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.cancel-btn-overlay:hover {
+  border: 2px solid #29ABE2;
+  color: #29ABE2;
+}
+
+.cancel-btn-overlay:hover path{
+  stroke: #29ABE2;
+}
+
+.button-group {
+  display: flex;
+  gap: 24px;
+}
+
+.cancel-btn-overlay {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 16px;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  background: white;
+  color: black;
+  border: 2px solid black;
+}
+
+.cancel-btn-overlay img {
+  height: 14px;
+  width: 14px;
+}
+
+
+
 .delete-btn-overlay {
   padding: 10px 15px;
   margin: 10px 5px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 16px;
   cursor: pointer;
   background: white;
@@ -160,23 +217,25 @@ button:hover {
   border: 1px solid black;
 }
 
+
+
 .save-btn-overlay,
 .create-btn-overlay {
-  padding: 10px 15px;
-  margin: 10px 5px;
+  padding: 16px;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 10px;
+  font-size: 20px;
   cursor: pointer;
   background: #1e2a3a;
   color: white;
+  transition: all 100ms ease-in-out;
 }
 
 .avatar-circle {
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background: #fca400;
+  background-color: #D9D9D9;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -219,6 +278,7 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+
   p {
     font-weight: 400;
     font-size: 20px;
