--- a/styles/signup.css
+++ b/styles/signup.css
@@ -124,7 +124,8 @@ body {
 /*   :::::::   email und pw   :::::::   */
 .name-wrapper,
 .email-wrapper,
-.pw-wrapper {
+.pw-wrapper,
+.rep-pw-wrapper {
     width: 422px;
     height: 48px;
     color: rgba(0, 0, 0, 0.3);
@@ -136,16 +137,18 @@ body {
     padding: 5px 16px;
 }
 
-
+.name-wrapper:hover,
 .email-wrapper:hover,
 .pw-wrapper:hover,
-.name-wrapper:hover {
+.rep-pw-wrapper:hover {
     border-color: #007bff;
 }
 
+
+.name-wrapper input,
 .email-wrapper input,
 .pw-wrapper input,
-.name-wrapper input {
+.rep-pw-wrapper input {
     width: 100%;
     height: 100%;
     border: none;
