--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -128,9 +128,10 @@
   justify-content: flex-start;
   width: 100%;
   height: 42px;
-  border: dashed 2px black;
+  /* border: dashed 2px black; */
   position: relative;
   top: -5px;
+  overflow-x: auto;
 }
 
 .user-circle {
