--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -572,8 +572,11 @@ textarea {
   position: relative;
   top: -55%;
   background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 
   div {
+    padding-top: 8px;
     padding-left: 8px;
     height: 48px;
     width: 100%;
