--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -174,6 +174,10 @@ span {
   object-position: center;
 }
 
+.profile_picture:hover {
+  cursor: pointer;
+}
+
 .tasks_section {
   padding: 0 8px;
   background-color: rgb(246, 248, 250);
@@ -284,4 +288,41 @@ span {
     width: 20px;
     height: 20px;
   }
+}
+
+.menu {
+  background-color: #2a3d59;
+  display: none;
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  z-index: 1000;
+  border-radius: 20px 0 20px 20px;
+  height: 180px;
+  width: 200px;
+}
+
+.menu-btns {
+  padding: 16px 0 0 16px;
+  background-color: #2a3d59;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  border-radius: 20px;
+}
+
+.menu-item {
+  margin: 5px;
+  width: 150px;
+  height: 22px;
+  color: #e2e8f0;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+.menu-item:hover {
+  color: #ffffff;
+  background-color: #284572;
 }
