--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -303,17 +303,19 @@ span {
 }
 
 .menu-btns {
-  padding: 16px 0 0 16px;
+  padding: 10px;
   background-color: #2a3d59;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  gap: 5px;
   border-radius: 20px;
+  gap: 5px;
 }
 
 .menu-item {
-  margin: 5px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
   width: 150px;
   height: 22px;
   color: #e2e8f0;
