--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -303,19 +303,17 @@ span {
 }
 
 .menu-btns {
-  padding: 10px;
+  padding: 16px 0 0 16px;
   background-color: #2a3d59;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  border-radius: 20px;
   gap: 5px;
+  border-radius: 20px;
 }
 
 .menu-item {
-  display: flex;
-  align-items: center;
-  padding: 15px;
+  margin: 5px;
   width: 150px;
   height: 22px;
   color: #e2e8f0;
