--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -531,13 +531,16 @@ textarea {
 .edit-subtask-item-field input {
 }
 .edit-subtask-btns {
+  display: flex;
+  gap: 8px;
   position: relative;
   top: -56%;
   right: -87%;
-  img {
-    width: 24px;
-    height: 24px;
-  }
+}
+
+.edit-subtask-btns img {
+  width: 24px;
+  height: 24px;
 }
 
 .edit-subtask-btns img:hover {
