--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -51,7 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: bold;
+  font-size: 12px;
   color: white;
   border: 1px solid white;
   width: 40px;
