--- a/styles/AddTaskSection/task_edit_overlay.css
+++ b/styles/AddTaskSection/task_edit_overlay.css
@@ -1,7 +1,8 @@
 .addTask-wrapper-edit-overlay{
     width: 100%;
     justify-content: space-between;
-    gap: 35px;
+    gap: 35px ; 
+    display: block !important;
 }
 
 .addTask-right-edit-overlay{
