--- a/styles/board.css
+++ b/styles/board.css
@@ -50,15 +50,15 @@ body {
   display: flex;
 }
 
-.contact-profile-picture {
+.contact-profile-picture-board {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 12px;
   color: white;
   border: 1px solid white;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
 }
 
@@ -192,6 +192,11 @@ body {
   width: 100%;
 }
 
+.board-card-description {
+  color: #A8A8A8;
+  
+}
+
 .board-card-priority {
   height: 32px;
   width: 32px;
@@ -210,8 +215,23 @@ body {
   justify-content: space-between;
 }
 
-progress {
+progress[value] {
+  -webkit-appearance:none;
+  -moz-appearance:none;        
+  appearance: none;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #e6e6e6;
+  border-radius: 16px;
+  height: 8px;
   width: 128px;
+}
+
+progress::-webkit-progress-value {
+  background-color: #4589FF;
+  border-radius: 16px;
+  height: 8px;
 }
 
 .board-card-subtasks span {
