--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -3,7 +3,7 @@ html {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  overflow-x: hidden; /* Prevent horizontal scrollbar */
+  overflow: hidden; /* Prevent horizontal scrollbar */
 }
 
 button {
@@ -19,8 +19,12 @@ button:hover {
   flex-grow: 1;
 }
 
-.logo {
-  padding-bottom: 128px;
+.logo-and-navbar-wrapper {
+  display: flex;  
+  height: 50%;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content_left {
@@ -87,7 +91,6 @@ span {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-bottom: 80%;
 }
 
 .judicial-links {
@@ -95,7 +98,7 @@ span {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 40vh;
+  flex: 1;
   justify-content: end;
 }
 
