--- a/styles/login.css
+++ b/styles/login.css
@@ -268,15 +268,7 @@ body {
     height: 20px;
 } */
 
-/*   :::::::   login button   :::::::    */
 
-.login-button-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 24px;
-    gap: 20px;
-}
 
 #error {
     width: 422px;
@@ -288,6 +280,69 @@ body {
 
 .error-highlight {
     border-color: red !important;
+}
+
+/*   :::::::   remember me   :::::::    */
+
+.remember-me-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.remember-me-wrapper label {
+    cursor: pointer;
+    font-size: 0.8em;
+    display: flex;
+}
+
+.remember-me-wrapper input[type='checkbox'] {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+
+}
+
+.remember-me-wrapper label::before {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    border: .05em solid #2A3647;
+    border-radius: .15em;
+    margin-right: .5em;
+    cursor: pointer;
+}
+
+.remember-me-wrapper label:hover::before,
+.remember-me-wrapper input[type="checkbox"]:hover+label::before,
+.remember-me-wrapper input[type="checkbox"]:focus+label::before {
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background: #EDF2FA;
+
+}
+.remember-me-wrapper input[type="checkbox"]:checked+label::before {
+    content: url('../assets/svg/box-checked.svg');
+    width: 1em;
+    height: 1em;
+    border: none;
+}
+
+.rm-chb {
+    width: 20px !important;
+    height: 20px !important;
+    margin-right: 10px !important;
+}
+
+
+/*   :::::::   login button  guest login button   :::::::    */
+
+.login-button-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 24px;
+    gap: 20px;
 }
 
 #loginForm {
