subtask buttons css

--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -469,8 +469,8 @@ textarea {
   width: 51px;
   height: 14px;
   position: relative;
-  top: -57%;
-  right: -87%;
+  top: -34px;
+  right: -85%;
 }
 
 .cancel-check-btn img:hover {
