trying to find a solution for h2 in task-card

--- a/styles/style_task_card_overlay.css
+++ b/styles/style_task_card_overlay.css
@@ -199,3 +199,9 @@
 .div-border-left:hover {
   border-left: none;
 }
+
+.task-card h2 {
+  max-height: 128px;
+  overflow: auto;
+  word-break: break-word;
+}
