--- a/styles/style_task_card_overlay.css
+++ b/styles/style_task_card_overlay.css
@@ -201,7 +201,8 @@
 }
 
 .task-card h2 {
-  max-height: 128px;
+  line-height: 73px;
+  max-height: 219px;
   overflow: auto;
   word-break: break-word;
 }
