adjusted styles, some responsive styles

--- a/styles/login.css
+++ b/styles/login.css
@@ -17,22 +17,22 @@ body {
     flex-direction: column;
     height: 100%;
     overflow: hidden;
-    background-color: #d8eef8;
+    background-color: #F6F7F8;
 
 
 }
 
 /*   :::::::   content wrapper   :::::::   */
 .login-content-box {
-    background-color: #3c5ef5;
+    /* background-color: #3c5ef5; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: 96vw;
     max-width: 1440px;
-    height: 720px;
-    min-height: 720px;
+    height: 880px;
+    min-height: 880px;
     position: relative;
     overflow: hidden;
 }
@@ -157,7 +157,7 @@ body {
     background-color: rgba(255, 255, 255, 1);
     animation: fade-out forwards;
     animation-duration: 2s;
-    animation-delay: 2s;
+    animation-delay: 2.4s;
     transition-timing-function: ease-in-out;
     z-index: 0;
 }
@@ -295,6 +295,7 @@ body {
 .remember-me-wrapper label {
     cursor: pointer;
     display: flex;
+    align-items: center;
 }
 
 .remember-me-wrapper input[type='checkbox'] {
@@ -430,7 +431,7 @@ body {
 
 /*   :::::::   media query  :::::::   */
 
-@media screen and (width < 428px) {
+@media screen and (width <= 428px) {
 
     .backdrop {
         position: absolute;
@@ -448,5 +449,8 @@ body {
 
     .logo-resp {
         display: block;
+    }
+    .login-content {
+        width: 88%;
     }
 }
