started to make contacts.html responsive

--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -208,3 +208,11 @@
 .mail-and-number {
 }
 
+@media(max-width: 1000px) {
+ .contacts-content-left {
+    width: 100%;
+  }
+  .contacts-content-right {
+    width: 0;
+  }
+}
