--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -222,6 +222,10 @@
 
 @media(max-width: 1000px) {
 
+  .header{
+    z-index: 30;
+  }
+
   .contacts-heading-right {
     padding-top: 0px;
   }
@@ -292,6 +296,16 @@ width: 100%;
   }
   .contact-information {
     padding: 32px;
-}
+}}
 
+@media(max-width: 350px){
+  .name-and-edit {
+    padding-left: 8px !important;
 }
+.pic-and-name {
+  display: flex
+;
+  align-items: center;
+  gap: 0px;
+  padding-bottom: 32px;
+}}
