--- a/styles/login.css
+++ b/styles/login.css
@@ -62,7 +62,20 @@ body {
 
         /* top: 80px;
         left: 77px; */
-        transform: scale(0.3, 0.3);
+        transform: scale(0.5, 0.5);
+    }
+}
+
+@keyframes color-change {
+    0% {
+        fill: #FFFFFF;
+
+        /* initial color */
+    }
+
+    100% {
+        fill: #2A3647;
+        /* final color */
     }
 }
 
@@ -148,6 +161,18 @@ body {
     z-index: 999;
 }
 
+#Ebene_1 {
+    width: 120px;
+    height: 240px;
+}
+
+/* #Ebene_1 g path[fill="#2A3647"] {
+    animation: color-change 2s forwards;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-timing-function: ease-in-out;
+} */
+
 .backdrop {
     position: absolute;
     top: 0;
@@ -208,11 +233,17 @@ body {
 }
 
 /*   :::::::   login form   :::::::   */
+#loginForm {
+    /* width: 422px; */
+    width: 100%;
+}
+
 .login-form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .login-form form {
@@ -353,10 +384,6 @@ body {
     gap: 20px;
 }
 
-#loginForm {
-    width: 422px;
-}
-
 .login {
     width: 110px;
     height: 40px;
@@ -436,7 +463,7 @@ body {
 
 /*   :::::::   media query  :::::::   */
 
-@media screen and ( 320px <= width <= 428px) {
+@media screen and (320px <=width <=428px) {
 
     .backdrop {
         position: absolute;
@@ -448,33 +475,82 @@ body {
         z-index: 0;
     }
 
-    .p1-logo img {
+    /* .p1-logo img {
         display: none;
-    }
+    } 
 
     .logo-resp {
         display: block;
     }
+    */
 
     .login-content {
         width: 88%;
     }
 
     .email-wrapper,
-    .pw-wrapper, #loginForm {
+    .pw-wrapper,
+    #loginForm {
         width: 88%;
-       
+
+    }
+
+    #Ebene_1 g path[fill="#2A3647"] {
+        fill: #FFFFFF;
+        animation: color-change 2s forwards;
+        animation-duration: 2.4s;
+        animation-delay: 1.6s;
+        animation-timing-function: ease-in-out;
     }
 }
 
-@media screen and (width <= 640px) {
+@media screen and (width <=640px) {
     .login-content {
-        width: 84%;
+        width: 98%;
     }
 
     .email-wrapper,
-    .pw-wrapper, #loginForm {
+    .pw-wrapper,
+    #loginForm {
         width: 88%;
-       
+
     }
+
+    .login-button-box {
+        flex-direction: column;
+        gap: 16px;
+        margin-bottom: 24px;
+    }
+
+    .login {
+        width: 180px;
+        font-size: 16px;
+    }
+
+    .guest-login {
+        font-size: 16px;
+    }
+
+    .login-h1 {
+        margin-bottom: 48px;
+        margin-top: 12px;
+    }
+
+    .nau-sign-up,
+    .nau-sign-up-box {
+        justify-content: center;
+    }
+
+    .nau-sign-up-box {
+        top: 720px;
+    }
+
+    #Ebene_1 g path[fill="#2A3647"] {
+        fill: #FFFFFF;
+        animation: color-change 2s forwards;
+        animation-duration: 2.4s;
+        animation-delay: 1.6s;
+        animation-timing-function: ease-in-out;
+    }
+
 }
