--- a/styles/signup.css
+++ b/styles/signup.css
@@ -24,8 +24,7 @@ body {
 
 /*   :::::::   content wrapper   :::::::   */
 .signup-content-box {
-    /* background-color: #3c5ef5; */
-    /* background-color: #d8eef8; */
+    /* background-color: #F6F7F8; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -37,21 +36,6 @@ body {
     position: relative;
     overflow: hidden;
 }
-
-/* .login-content-box {
-    background-color: #3c5ef5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 96vw;
-    max-width: 1440px;
-    height: 720px;
-    min-height: 720px;
-    position: relative;
-    overflow: hidden;
-} */
-
 
 
 
@@ -69,26 +53,16 @@ body {
     /*   :::::::   
     z-index: 1;*/
 }
- .logo, .logo img {
+
+.logo,
+.logo img {
     height: 100px;
     object-fit: contain;
-    
- }
-
-
-
-
-
-.nau-sign-up button:hover,
-.login:hover,
-.guest-login:hover {
-
-    box-shadow: 0px 4px 4px 0px #00000040;
 }
-
 
 /*   :::::::   page 'Login'   :::::::   */
 .signup-content {
+    background-color: #85fa9e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,20 +70,58 @@ body {
     width: 560px;
     height: 630px;
     min-height: 449px;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     border-radius: 30px;
-
     position: absolute;
 
 }
 
 /*   :::::::   'signup' headline   :::::::   */
 .sgnp-h1 {
+    position: relative;
+    margin-bottom: 48px;
+    width: 315px;
+    height: 89px;
+    gap: 16px;
+    text-align: center;
+}
+
+.arrow-link {
+    position: absolute;
+    left: -80px;
+    top: 32%;
+    transform: translateY(-50%);
+}
+
+.arrow-link img {
+    width: 32px;
+    height: 32px;
+}
+
+.sgnp-h1 h1 {
+    position: relative;
+}
+
+.sgnp-h1 h1::after {
+    content: "";
+    display: block;
+    width: 40%;
+    height: 8px;
+    border-bottom: 3px solid #29ABE2;
+    margin-top: 12px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+/* .sgnp-h1 {
     margin-bottom: 48px;
     width: 315px;
     height: 89px;
     gap: 16px;
     position: relative;
+
 }
 
 .sgnp-h1::after {
@@ -124,12 +136,26 @@ body {
     transform: translateX(-50%);
 }
 
+
+.sgnp-h1 h1::before {
+    content: url('../assets/svg/arrow_back.svg');
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    left: -80px;
+    top: 24%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
 .sgnp-h1 h1 {
     font-size: 61px;
     font-weight: 700;
     text-align: center;
     line-height: 73.2px;
-}
+    position: relative;
+} */
 
 /*   :::::::   signup form   :::::::   */
 .sgnp-form {
@@ -182,9 +208,11 @@ body {
     font-size: 1em;
     outline: none;
     padding: 0 16px 0 0;
+    background: transparent;
 }
 
-#pwIcon, #repPwIcon {
+#pwIcon,
+#repPwIcon {
     width: 24px;
     height: 24px;
     border: none;
@@ -414,4 +442,74 @@ body {
 
 .d-none {
     display: none;
+}
+
+/*   :::::::   media query  :::::::   */
+@media screen and (320px <=width <=428px) {
+    .signup-content {
+        width: 88%;
+    }
+
+    .name-wrapper,
+    .email-wrapper,
+    .pw-wrapper,
+    .rep-pw-wrapper,
+    #loginForm {
+        width: 88%;
+
+    }
+}
+
+@media screen and (width <=640px) {
+    .signup-content {
+        width: 98%;
+    }
+
+    .name-wrapper,
+    .email-wrapper,
+    .pw-wrapper,
+    .rep-pw-wrapper,
+    #loginForm {
+        width: 92%;
+
+    }
+
+    .login-button-box {
+        flex-direction: column;
+        gap: 16px;
+        margin-bottom: 24px;
+    }
+
+    .login {
+        width: 180px;
+        font-size: 16px;
+    }
+
+    .guest-login {
+        font-size: 16px;
+    }
+
+    .login-h1 {
+        margin-bottom: 48px;
+        margin-top: 12px;
+    }
+
+    .nau-sign-up,
+    .nau-sign-up-box {
+        justify-content: center;
+    }
+
+    .nau-sign-up-box {
+        top: 720px;
+    }
+
+    #Ebene_1 g path[fill="#2A3647"] {
+        /* fill: #2A3647; */
+        /* fill: #FFFFFF; */
+        animation: color-change 2s forwards;
+        animation-duration: 2.4s;
+        animation-delay: 1.6s;
+        animation-timing-function: ease-in-out;
+    }
+
 }
