--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -3,7 +3,8 @@
 }
 
 .contacts-content-left {
-  width: 456px; /* Feste Breite von 456px */
+  width: 456px;
+  /* Feste Breite von 456px */
   background-color: white;
   height: calc(100vh - 96px);
   overflow-y: auto;
@@ -63,7 +64,6 @@
   display: flex;
   align-items: center;
   padding: 16px;
-  border-bottom: 1px solid #e0e0e0;
   gap: 16px;
 }
 
@@ -140,6 +140,7 @@
   flex-direction: column;
   gap: 16px;
   padding: 64px;
+
   span {
     font-weight: 400;
     font-size: 20px;
@@ -153,6 +154,7 @@
     line-height: 24px;
   }
 }
+
 .pic-and-name {
   display: flex;
   align-items: center;
@@ -167,6 +169,7 @@
 .name-and-edit h2 {
   font-size: 47px;
 }
+
 .edit-delete-btn {
   display: flex;
   align-items: center;
@@ -205,8 +208,9 @@
     box-shadow: none;
   }
 }
-.mail-and-number {
-}
+
+.mail-and-number {}
+
 .responsive-back-btn {
   display: none;
   position: sticky;
@@ -220,22 +224,45 @@
   cursor: pointer;
 }
 
+.add-contact-btn {
+  cursor: pointer;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 24px;
+  bottom: 100px;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  background-color: #2a3647;;
+}
+
 @media(max-width: 1000px) {
 
-  .header{
+  .add-contact-btn {
+    display: flex;
+  }
+
+  .contacts-content-left-header {
+    display: none;
+  }
+
+  .header {
     z-index: 30;
   }
 
   .contacts-heading-right {
     padding-top: 0px;
   }
+
   .contacts-content-left {
     width: 100%;
   }
-  
+
   .contacts-content-right {
     display: none;
-width: 100%;
+    width: 100%;
   }
 
   .responsive-back-btn {
@@ -244,68 +271,73 @@ width: 100%;
 }
 
 @media(max-width: 614px) {
-  .contacts-content-right{
-    
-    h2{
+  .contacts-content-right {
+
+    h2 {
       font-size: 36px;
     }
   }
-  .contacts-heading-right{
+
+  .contacts-heading-right {
     flex-direction: column;
-    gap:0;
+    gap: 0;
     align-items: flex-start;
-    padding-left:32px;
+    padding-left: 32px;
   }
 
   .bigContacts {
     font-size: 47px;
     line-height: 40px;
   }
+
   .betterwith {
     padding: 0;
     padding-bottom: 8px;
     color: #2a3647;
     display: flex;
     align-items: center;
- width: auto;
- height: auto;
+    width: auto;
+    height: auto;
     font-family: Inter;
     font-weight: 400;
     font-size: 27px;
     border-left: none;
-    border-bottom: 3px solid #29abe2; 
+    border-bottom: 3px solid #29abe2;
     border-image: linear-gradient(to right, #29abe2 60%, transparent 40%);
     border-image-slice: 0 0 1 0;
-}
+  }
 }
 
 @media(max-width: 544px) {
-  .contacts-content-right{
-    .avatar-circle{
+  .contacts-content-right {
+    .avatar-circle {
       width: 80px;
       height: 80px;
     }
-    
-    h2{
+
+    h2 {
       font-size: 36px;
     }
 
-    .name-and-edit{
+    .name-and-edit {
       padding-left: 32px;
     }
   }
+
   .contact-information {
     padding: 32px;
-}}
+  }
+}
 
-@media(max-width: 350px){
+@media(max-width: 350px) {
   .name-and-edit {
     padding-left: 8px !important;
+  }
+
+  .pic-and-name {
+    display: flex;
+    align-items: center;
+    gap: 0px;
+    padding-bottom: 32px;
+  }
 }
-.pic-and-name {
-  display: flex
-;
-  align-items: center;
-  gap: 0px;
-  padding-bottom: 32px;
-}}
